--- a/src/App.css
+++ b/src/App.css
@@ -9,9 +9,17 @@ width: 100%;
 height: 100%;
 background-size: cover;
 background-repeat: no-repeat;
-background-position: 50%;
+/* background-position: 50%; */
 }
 .background-container {
+  display: flex;
   height: 100%;
   width: 100%;
+  /* background-position: 50%; */
+}
+@media screen and (min-width: 480px) {
+  .background-container {
+    height: 100%;
+    width: 100%;
+  }
 }
