--- a/src/App.css
+++ b/src/App.css
@@ -1,25 +1,25 @@
-* {
+ * {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
-}
+} 
 
 .App-backgroundImage {
-width: 100%;
-height: 100%;
+max-width: 100%;
+ height: 100%;
 background-size: cover;
 background-repeat: no-repeat;
-/* background-position: 50%; */
+opacity: 0.3;
+
 }
-.background-container {
-  display: flex;
-  height: 100%;
+ .background-container {
+ height: 100%;
   width: 100%;
-  /* background-position: 50%; */
-}
-@media screen and (min-width: 480px) {
+  background-color: black;
+} 
+/* @media screen and (min-width: 480px) {
   .background-container {
     height: 100%;
     width: 100%;
   }
-}
+} */
