--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@ max-width: 100%;
  height: 100%;
 background-size: cover;
 background-repeat: no-repeat;
-opacity: 0.3;
+opacity: 0.5;
 
 }
  .background-container {
@@ -21,7 +21,6 @@ opacity: 0.3;
 .navbar-toggler-icon {
   height: 2.5em;
   width: 2.5em;
-  background-color: white;
 }
 .navbar-toggler:focus {
   box-shadow: white;
@@ -34,6 +33,15 @@ opacity: 0.3;
   margin-top: 10px;
   margin-bottom: 0;
   list-style: none;
+}
+.me-auto {
+  align-items: center;
+}
+.navbar-collapse {
+  flex-grow: 0!important;
+}
+.navbar-nav {
+  font-size: 20px;
 }
 /* Cards */
 .card-body {
