logoMono added to background component

--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 .App-backgroundImage {
 max-width: 100%;
- height: 100%;
+height: 100%;
 background-size: cover;
 background-repeat: no-repeat;
 opacity: 0.5;
@@ -17,6 +17,22 @@ opacity: 0.5;
   width: 100%;
   background-color: black;
 } 
+
+.background {
+ 
+  position: relative;
+  text-align: center;
+  color: white;
+}
+.centered {
+  /* background-image: url("../src/images/logoMono300x228.png"); */
+  position: absolute;
+  
+  height: 50%;
+  top: 40%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
 /* navbar menu button */
 .navbar-toggler-icon {
   height: 2.5em;
@@ -52,9 +68,8 @@ opacity: 0.5;
 }
 
 
- /*@media screen and (min-width: 480px) {
-  /* .background-container {
-    height: 100%;
-    width: 100%;
-  } 
-} */
+ @media screen and (max-width: 480px) {
+  .App-backgroundImage {
+    display: none;
+  }
+}
