--- a/src/App.css
+++ b/src/App.css
@@ -66,9 +66,29 @@ opacity: 0.5;
   align-items: center;
 }
 
-
+@media screen and (min-width: 600px) {
+  .App-backgroundMobile{
+    display: none;
+  }
+}
  @media screen and (max-width: 480px) {
   .App-backgroundImage {
     display: none;
   }
+  
+  .App-backgroundMobile {
+    height: 30vmin;
+    background-color: white;
+    min-height: 69vh;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    font-size: calc(10px + 2vmin);
+    color: black;
+    padding-bottom: 170px;
+    }
+    .logo-mono {
+      display: none;
+    }
 }
