--- a/src/App.css
+++ b/src/App.css
@@ -65,6 +65,10 @@ opacity: 0.5;
   flex-direction: column;
   align-items: center;
 }
+/*TextOffer*/
+.text-container {
+  background-color: white;
+}
 
 @media screen and (min-width: 600px) {
   .App-backgroundMobile{
