--- a/src/App.css
+++ b/src/App.css
@@ -33,9 +33,13 @@ opacity: 0.5;
   transform: translate(-50%, -50%);
 }
 /* navbar menu button */
+.navbar-expand-xl {
+  padding-top: 0px;
+  padding-bottom: 0px;
+}
 .navbar-toggler-icon {
-  height: 2.5em;
-  width: 2.5em;
+  height: 1.5em;
+  width: 1.5em;
 }
 .navbar-toggler:focus {
   box-shadow: white;
@@ -48,6 +52,7 @@ opacity: 0.5;
   margin-top: 10px;
   margin-bottom: 0;
   list-style: none;
+  
 }
 .me-auto {
   align-items: center;
@@ -76,9 +81,12 @@ opacity: 0.5;
   }
 }
  @media screen and (max-width: 480px) {
-  .App-backgroundImage {
+   .App-backgroundImage {
     display: none;
-  }
+    height: 100vh;
+   
+  } 
+
   .mobile-container{
     min-width: 100%;
 
