--- a/src/App.css
+++ b/src/App.css
@@ -6,7 +6,7 @@
 
 .App-backgroundImage {
 max-width: 100%;
-height: 100%;
+height: 100vh;
 background-size: cover;
 background-repeat: no-repeat;
 opacity: 0.5;
@@ -19,7 +19,6 @@ opacity: 0.5;
 } 
 
 .background {
- 
   position: relative;
   text-align: center;
   color: white;
@@ -93,27 +92,32 @@ opacity: 0.5;
 @media screen and (min-width: 600px) {
   .App-backgroundMobile{
     display: none;
-  }
-
+  } 
+.BackgroundCarouselMobile {
+  display: none;
+}
 }
  @media screen and (max-width: 480px) {
-   .App-backgroundImage {
+    /* .App-backgroundImage {
     display: none;
     height: 100vh;
-  } 
+  }    */
+  .BackgroundCarousel {
+    display: none;
+  }
   .mobile-container{
     min-width: 100%;
   }
-  .App-backgroundMobile {
+   .App-backgroundMobile {
     background-size: contain;
     background-repeat: no-repeat;
     padding-bottom: 67px;
     width: 100%;
     padding-left: 8px;
-    }
-    .logo-mono {
+    } 
+     .logo-mono {
       display: none;
-    }
+    } 
     .carousel-text-card {
       font-size: 13px;
     }
