app.css file corrected

--- a/src/App.css
+++ b/src/App.css
@@ -115,9 +115,9 @@ opacity: 0.5;
     width: 100%;
     padding-left: 8px;
     } 
-     .logo-mono {
+     /* .logo-mono {
       display: none;
-    } 
+    }  */
     .carousel-text-card {
       font-size: 13px;
     }
