modalCatering component created

--- a/src/App.css
+++ b/src/App.css
@@ -69,10 +69,18 @@ opacity: 0.5;
   flex-direction: column;
   align-items: center;
 }
-/*TextOffer*/
-.text-container {
-  background-color: white;
+/*Modal menu*/
+.modal-body {
+  background-color: black;
 }
+.modal-menu-img {
+max-width: 100%;
+height:50%;
+background-size: cover;
+background-repeat: no-repeat;
+
+}
+
 /*CarouselText*/
 .carousel-text {
   display: flex;
