--- a/src/App.css
+++ b/src/App.css
@@ -36,6 +36,9 @@ opacity: 0.5;
   padding-top: 0px;
   padding-bottom: 0px;
 }
+.navbar-dark .navbar-toggler-icon {
+  background-image: url('data:image/svg+xml,%3csvg xmlns=%27http://www.w3.org/2000/svg%27 viewBox=%270 0 30 30%27%3e%3cpath stroke=%27rgba%28255, 255, 255, 0.55%29%27 stroke-linecap=%27round%27 stroke-miterlimit=%2710%27 stroke-width=%272%27 d=%27M4 7h22M4 15h22M4 23h22%27/%3e%3c/svg%3e');
+}
 .navbar-toggler-icon {
   height: 1.5em;
   width: 1.5em;
