CardFinger component 5 new cards and logoColor added to card,background-color was changed to black

--- a/src/App.css
+++ b/src/App.css
@@ -100,6 +100,14 @@ display: flex;
 .carousel-text-card{
   font-size: 15px;
 }
+/*FingerFood page*/
+.FingerFood {
+  background-color: black;
+  color: white;
+}
+.h-100 {
+  background-color: black;
+}
 /* footer */
 .logoMono-footer {
   width: 200px;
