--- a/src/App.css
+++ b/src/App.css
@@ -71,6 +71,12 @@ opacity: 0.5;
   justify-content: center;
   flex-direction: column;
   align-items: center;
+  background-color: black;
+  color: white;
+}
+.card-img, .card-img-top, .card {
+  border-top-left-radius: 0px!important;
+  border-top-right-radius: 0px!important;
 }
 /*Modal menu*/
 .modal-body {
@@ -99,6 +105,10 @@ display: flex;
 }
 .carousel-text-card{
   font-size: 15px;
+}
+/*Offers page*/
+.Offers {
+  background-color: black;
 }
 /*FingerFood page*/
 .FingerFood {
