img and text added to first card in CardFinger

--- a/src/App.css
+++ b/src/App.css
@@ -119,6 +119,11 @@ display: flex;
 .h-100 {
   background-color: black;
 }
+.card-text{
+  display: flex;
+  justify-content: center!important;
+  align-items: center!important;
+}
 /*GalleryComp*/
 .gallery-container{
   background-color: black;
